@@ -66,7 +66,6 @@ function tx_mnogosearch_indexingConfig_labelFunc(array &$params) {
 	}
 }
 
-
 $TCA['tx_mnogosearch_indexconfig'] = array (
 	'ctrl' => array (
 		'title'     => 'LLL:EXT:mnogosearch/locallang_db.xml:tx_mnogosearch_indexconfig',
@@ -78,6 +77,7 @@ $TCA['tx_mnogosearch_indexconfig'] = array (
 		'cruser_id' => 'cruser_id',
 		'sortby' 	=> 'sorting',
 		'rootLevel'	=> -1,
+		'dividers2tabs' => 2,
 		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY).'tca.php',
 		'iconfile'	=> t3lib_extMgm::extRelPath($_EXTKEY).'icon_tx_mnogosearch_indexconfig.gif',
 		'typeicon_column'	=> 'tx_mnogosearch_type',
